--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,11 +5,23 @@
 	<div  class="footer_img col-2">
        <p><img src="{{ "images/jumbotron_bkg.jpg" | relative_url }}"></p>
 	</div>
-    </section>
+  </section>
+  <section class="grid-4-small-1">
+    <div></div>
+    <div class="col-2">
+      <center>
+	<a href="https://www.instagram.com/filenphotos"><img width="40" heigth="30" src="{{ "/images/instagram.svg" | relative_url }}"></a>
+	<a href="https://www.pinterest.com/filenphotos"><img width="40" heigth="30" src="{{ "/images/pinterest.svg" | relative_url }}"></a>
+      </center>
+     </div>
+    <div></div>
+  </section>
   <section class="grid-4-small-1">
 	<div></div>
 	<div  class="col-2">
-       <p>© filenphotos 2024</p>
+	  <center>
+	    <p>© filenphotos 2024</p>
+	    </center>
 	</div>
 	<div></div>
     </section>
