--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,6 +12,7 @@
       <center>
 	<a href="https://www.instagram.com/filenphotos"><img width="40" heigth="30" src="{{ "/images/instagram.svg" | relative_url }}"></a>
 	<a href="https://www.pinterest.com/filenphotos"><img width="40" heigth="30" src="{{ "/images/pinterest.svg" | relative_url }}"></a>
+	<a href="https://youtube.com/@filenphotos?si=eI0Atqhz23n0kYkX"><img width="40" heigth="30" src="{{ "/images/youtube.svg" | relative_url }}"></a>
       </center>
      </div>
     <div></div>
