--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,11 +9,12 @@
   gtag('config', 'UA-52037542-1');
 </script>
 
-  <META NAME="keywords" CONTENT="theatre amateur, atelier theatre, compagnie de theatre, antibes, spectacle, improvisation"> 
+  <META NAME="keywords" CONTENT="photo, broderie, créatrice, Antibes, fil, couture, loisirs créatifs, ateliers">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
+  <link rel="shortcut icon" type="image/x-icon" href="{{ "/images/logo.svg" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
@@ -24,4 +25,5 @@
   <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
+
 </head>
