Mise a jour pages

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -50,9 +50,8 @@
 .post-content {
   border-radius: 0px 0px 20px 20px;
   img {max-height:400px; display: block; margin-left:auto; margin-right: auto; width: auto;}
-  font-family: caveat;
+  font-family: aria;
   font-size: 2rem;
-  font-style: italic;
 
 }
 
@@ -77,7 +76,7 @@
 
 .kits {
     img {display: block; border-style: solid}
-      font-family: caveat;
+      font-family: aria;
   font-size: 2rem;
 }
 
