Fix type in kit

--- a/_layouts/kit.html
+++ b/_layouts/kit.html
@@ -2,9 +2,9 @@
 layout: default
 ---
   <div class="post-content">
-    Nos kits sont fabriqués individuellement dans notre atelier en petit quantité.
+    Nos kits sont fabriqués individuellement dans notre atelier en petite quantité.
 L’ensemble des éléments qui les composent sont méticuleusement choisis.
-Notre première collection « Mon premier salon à Antibes ».
+Notre première collection s'intitule « Mon premier salon à Antibes ». En voici les différents modèles !
   </div>
 <main aria-label="Content">
       <section class="kits grid-3-small-1 has-gutter">
