Add burger menu, cosmetic changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <section class="grid-4-small-1">
 	<div></div>
 	<div  class="footer_img col-2">
-       <p><img src="{{ "images/jumbotron_bkg.jpg" | relative_url }}"></p>
+       <p><img src="{{ "images/logo.svg" | relative_url }}"></p>
 	</div>
   </section>
   <section class="grid-4-small-1">
