--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ layout: default
 
   {{ content }}
   {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">Notre actualit&eacute</h2>
+    <h2 class="post-list-heading"></h2>
       {% for post in paginator.posts %}
     <div class="flex-container--column post-sumup">
     <div class="left post-header">
