--- a/_sass/_config/_variables.scss
+++ b/_sass/_config/_variables.scss
@@ -215,7 +215,7 @@ $tabs-active-background : $black !default;
 $tabs-border-radius     : 0 !default;
 
 // Component: nav burger button
-$burger-color             : $gray-800 !default;
+$burger-color             : #9f3863 !default;
 $burger-background        : transparent !default;
 $burger-hover-background  : transparent !default;
 $burger-size              : 2.6rem !default;
