--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
     <div class="filenphoto_menu">
      <div class="filenphoto_menu_text"><p>Filenphotos</p></div>
      <div class="js-tabs">
-       <button class="nav-button" type="button" role="button" aria-label="open/close navigation"><i></i></button>
+       <button class="nav-button filenphoto_menu_button" type="button" role="button" aria-label="open/close navigation"><i></i></button>
      </div>
     </div>
 
