Adding Mail contact

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,7 @@
     <div></div>
     <div class="col-2">
       <center>
+	<a href="mailto:info.filenphotos@gmail.com"><img width="40" heigth="30" src="{{ "/images/mail.svg" | relative_url }}"></a>
 	<a href="https://www.instagram.com/filenphotos"><img width="40" heigth="30" src="{{ "/images/instagram.svg" | relative_url }}"></a>
 	<a href="https://www.pinterest.com/filenphotos"><img width="40" heigth="30" src="{{ "/images/pinterest.svg" | relative_url }}"></a>
 	<a href="https://youtube.com/@filenphotos?si=eI0Atqhz23n0kYkX"><img width="40" heigth="30" src="{{ "/images/youtube.svg" | relative_url }}"></a>
