Nouveau post, changement style

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,12 @@
        <p><img src="{{ "images/logo.svg" | relative_url }}"></p>
 	</div>
   </section>
+    <section class="grid-4-small-1">
+	<div></div>
+	<div  class="footer_img col-2">
+	  <center><p>contact: info.filenphotos@gmail.com</p></center>
+	</div>
+  </section>
   <section class="grid-4-small-1">
     <div></div>
     <div class="col-2">
